Mejoras en el estado del arte; adición de abstract y agradecimientos

--- a/frontmatter/01-resumen.tex
+++ b/frontmatter/01-resumen.tex
@@ -1,17 +1,10 @@
 \chapter{Resumen.}
-\justifying
-En los últimos años, la elaboración de entornos virtuales complejos, 
-como \textit{REBOUND}, \textit{Universe sandbox}, \textit{Stellarium} y \textit{Celestia}, 
-han experimentado un crecimiento exponencial en sus capacidades. Más, cuando se habla de 
-implementar mejoras en la precisión y escalabilidad dentro de sistemas de \textit{n}-cuerpos celestes, 
-por ejemplo, la simulación de nacimientos de galaxias, todavía existen dificultades, ya que, actualmente, 
-los modelos que los simulan no permiten introducir cambios en los parámetros de los cuerpos durante su ejecución, 
-parámetros como la velocidad, posición y masa del cuerpo, lo que impide contar con escenarios más fidedignos a los 
-comportamientos  físicos dentro de sistemas de $n$-cuerpos atípicos. En este proyecto, se propone solucionar este 
-problema mediante la construcción de un modelo que permita realizar cambios al parámetro más significativo del  sistema, 
-compuesto por dos cuerpos, en tiempo de ejecución, implementando técnicas como el método multipolar rápido (FMM, por sus siglas en inglés, 
-\textit{Fast Multipole Method}), el \textit{algoritmo de Barnes-Hut} y algoritmos bioinspirados. La solución que se desarrolle podría usarse 
-para simular comportamientos físicos dentro de entornos virtuales.\\
+\justifying%
+En los últimos años, el desarrollo de entornos virtuales complejos—como \textit{REBOUND}, \textit{Universe sandbox}, \textit{Stellarium} y \textit{Celestia}—ha experimentado un crecimiento exponencial en sus capacidades. Sin embargo, al abordar la estabilidad y escalabilidad en sistemas celestes de \textit{n} cuerpos, por ejemplo, la simulación de nuevas formas de formación de galaxias, persisten importantes desafíos. Los modelos actuales que simulan estos fenómenos normalmente no permiten modificar parámetros clave de los cuerpos celestes—como velocidad, posición y masa—durante la ejecución. Esta limitación restringe la capacidad de generar escenarios físicamente más precisos, especialmente en sistemas atípicos de $n$ cuerpos.
+
+En este proyecto terminal, proponemos una solución a esta restricción mediante la construcción de un modelo que posibilita la modificación en tiempo real de la masa en un sistema de dos cuerpos. El modelo incorpora diversas técnicas de cálculo gravitatorio, incluyendo el cálculo directo y el algoritmo de Barnes-Hut, así como algoritmos bioinspirados. La solución propuesta podría emplearse para simular interacciones físicas dinámicas en entornos virtuales.
 
 \chapter{Abstract.}
-\lipsum[1-3]
+In recent years, the development of complex virtual environments, such as \textit{REBOUND}, \textit{Universe sandbox}, \textit{Stellarium} and \textit{Celestia}, has experienced exponential growth in capabilities. However, when addressing stability and scalability in $n$-body celestial systems, such as the simulation of novel forms of galaxy formation, significant challenges remain. Current models that simulate these phenomena typically do not allow changes to key parameters of celestial bodies, such as velocity, position, and mass, during runtime. This limitation restricts the ability to generate more physically accurate scenarios, especially in atypical $n$-body systems.
+
+In this terminal project, we propose a solution to this limitation by constructing a model that enables modification of mass in a two-body system during execution time. The model incorporates various gravitational computation techniques, including direct calculation and the Barnes-Hut algorithm, as well as bio-inspired algorithms. The proposed solution could be used to simulate dynamic physical interactions in virtual environments.
