--- a/frontmatter/02-Agradecimientos.tex
+++ b/frontmatter/02-Agradecimientos.tex
@@ -1,2 +1,13 @@
 \chapter{Agradecimientos.}
-\lipsum[1]
+El presente trabajo terminal, documentado en este informe técnico, no habría sido posible sin el invaluable apoyo, la guía y la inspiración de numerosas personas a lo largo de nuestra trayectoria académica. A todos ellos, expresamos nuestro más profundo y sincero agradecimiento.
+
+En primer lugar, deseamos reconocer a nuestros directores, el Dr.\ Cesar Hernández Vásquez y el Dr.\ Mauricio Olguín Carbajal, por su dedicación, paciencia y valioso apoyo intelectual durante este proceso. Su orientación especializada, sus críticas constructivas y su constante motivación han sido pilares fundamentales en el desarrollo de la investigación y la propuesta de solución planteada en este proyecto. Sin su confianza y disposición para compartir su conocimiento, esta primera presentación de resultados no habría alcanzado su forma actual.
+
+Asimismo, extendemos nuestra gratitud a los miembros del comité sinodal, la Dra. Yesica Sonia Flores Meraz, el M. en C. Jesús Alfredo Martínez Nuño y el Dr.\ Genaro Juárez Martínez, por su tiempo, esfuerzo y compromiso al evaluar este trabajo terminal. Sus comentarios y sugerencias han enriquecido significativamente la calidad de esta investigación y seguirán siendo esenciales para su mejora.
+
+De manera especial, agradecemos a la Dra. Lorena Chavarría Báez por su apoyo incondicional en el planteamiento del protocolo y la delimitación del proyecto. Sus aportaciones y sugerencias fueron cruciales para afinar el enfoque de esta investigación, contribuyendo a la profundidad y claridad que caracterizan el trabajo aquí presentado.
+
+Igualmente, queremos destacar la colaboración de los Dr.\ Daniel Molina Pérez y M. en C. José Alberto Torres León, quienes, en su rol de consultores expertos, revisaron el propósito, los objetivos y el desarrollo de este proyecto. Su retroalimentación, validada mediante el “juicio de experto”, junto con sus valiosos comentarios, nos permitió perfeccionar las técnicas y la calidad de este informe.
+
+Por último, pero no menos importante, rendimos homenaje a nuestras familias por su amor incondicional, paciencia y sacrificios a lo largo de este arduo camino. Su respaldo constante ha dado un significado especial a esta presentación.
+A través de esta primera parte del trabajo terminal, hemos enfrentado desafíos que nos han permitido crecer tanto personal como académicamente. Este proceso nos ha revelado nuevas dimensiones del conocimiento, así como la resiliencia y determinación que habitan en nosotros. A todos quienes nos han acompañado con su apoyo, guía e inspiración, les debemos una parte esencial de este logro inicial. Gracias por todo.
