--- a/frontmatter/advertisement.tex
+++ b/frontmatter/advertisement.tex
@@ -1,6 +1,6 @@
-\filright
+\filright%
 \begin{minipage}{\textwidth}
-    \filright
+    \filright%
     \centering
     \begin{tcolorbox}[enhanced,attach boxed title to top center={yshift=-3mm,yshifttext=-1mm},
       colback=blue!5!white,colframe=blue!75!black,colbacktitle=red!80!black,
@@ -10,12 +10,12 @@
     Superior de Cómputo del Instituto Politécnico Nacional, a partir de datos y
     documentos con derecho de propiedad y por lo tanto, su uso quedará
     restringido a las aplicaciones que explícitamente se convengan.”}\\
-    
+
     La aplicación no convenida exime a la escuela su responsabilidad técnica y
     da lugar a las consecuencias legales que para tal efecto se determinen.\\
-    
+
     Información adicional sobre este reporte técnico podrá obtenerse en:\\
-    
+
     La Subdirección Académica de la Escuela Superior de Cómputo del Instituto
     Politécnico Nacional, situada en Av. Juan de Dios Bátiz s/n Teléfono: 57296000, extensión 52000.
     \end{tcolorbox}
