añadi la bitacora en appendix

--- a/main.tex
+++ b/main.tex
@@ -106,6 +106,8 @@
     \appendix
         %\include{Appendices/appendixA}
         %\include{Appendices/appendixB}
+        \include{Appendices/bitacora}
+
 
 \backmatter%
     \bookmarksetup{startatroot}
